config of size and scale

--- a/seyana/MainWindow.xaml
+++ b/seyana/MainWindow.xaml
@@ -15,6 +15,7 @@
     <Window.ContextMenu>
         <ContextMenu>
             <MenuItem Header="summon" Click="Summon_Clicked"/>
+            <MenuItem Header="config" Click="Config_Clicked"/>
             <MenuItem Header="quit" Click="Quit_Clicked"/>
         </ContextMenu>
     </Window.ContextMenu>
@@ -23,7 +24,7 @@
         <!--
         <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Text="Hello World!"/>
         -->
-        <Image Source="seyana.png" Margin="-180, -100" RenderTransformOrigin="0.5, 0.5">
+        <Image Source="img/seyana.png" Margin="-180, -100" RenderTransformOrigin="0.5, 0.5">
             <Image.RenderTransform>
                 <ScaleTransform x:Name="invert" ScaleX="1"/>
             </Image.RenderTransform>
